bin_PROGRAMS = aconnectgui
EXTRA_DIST=images

aconnectgui_SOURCES = \
FrameGroup.hxx \
Client.hxx \
Client.cxx \
Connection.hxx \
Connection.cxx \
Connector.hxx \
Connector.cxx \
ConnectorType.hxx \
Port.hxx \
Port.cxx \
Window.hxx \
Window.cxx \
Layout.hxx \
aconnect.cxx

aconnectgui_LDADD = @LIBS@ @ALSA_LIBS@
